fix(Avatar): change default bg color on dark mode

--- a/packages/themes/src/morpheme/_avatar.dark.scss
+++ b/packages/themes/src/morpheme/_avatar.dark.scss
@@ -1,7 +1,7 @@
 .dark {
   .avatar {
     &-default {
-      --avatar-bg-color: var(--color-gray-true-800);
+      --avatar-bg-color: var(--color-gray-true-700);
       --avatar-text-color: var(--color-gray-true-200);
     }
   }
